objects/ASI_JP_TnE_Expense_Classification__c.object
<CustomObject>
    <fields>
        <fullName>ASI_JP_TnE_Account_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Mapping</label>
        <referenceTo>ASI_TnE_Account_Mapping__c</referenceTo>
        <relationshipName>TnE_JP_Expense_Classifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_JP_TnE_Bypass_Attendee_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Attendee Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_JP_TnE_Expense_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Category</label>
        <referenceTo>ASI_JP_TnE_Expense_Category__c</referenceTo>
        <relationshipName>TnE_JP_Expense_Classifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_JP_TnE_Maximum_Amount__c</fullName>
        <label>Maximum Amount Per Head</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_JP_TnE_Minimum_Amount__c</fullName>
        <label>Minimum Amount Per Head</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_JP_TnE_Tax_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Expense_Classifications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Expense_Classifications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Approver_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 4</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Expense_Classifications5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Expense_Classifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Auto_Receipt_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Receipt No.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_BC_Code__c</fullName>
        <label>BC Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_BU_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BU Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Budget_Type__c</fullName>
        <label>Budget Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T&amp;E</fullName>
                    <default>true</default>
                    <label>T&amp;E</label>
                </value>
                <value>
                    <fullName>A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Gasoline</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Lens</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_CR_Corp_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CR (Corp Card)</label>
        <referenceTo>ASI_TnE_Account_Mapping__c</referenceTo>
        <relationshipLabel>ASI TnE Expense Classifications (CR (Corp Card))</relationshipLabel>
        <relationshipName>ASI_TnE_Expense_Classifications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_CR_Out_of_Pocket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CR (Out of Pocket)</label>
        <referenceTo>ASI_TnE_Account_Mapping__c</referenceTo>
        <relationshipLabel>ASI TnE Expense Classifications (CR (Out of Pocket))</relationshipLabel>
        <relationshipName>ASI_TnE_Expense_Classifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_DF_BS__c</fullName>
        <label>DF BS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_DM_BS__c</fullName>
        <label>DM BS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Enforce_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enforce Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_GnH_Type__c</fullName>
        <label>G&amp;H Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gifts</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_GnH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>G&amp;H</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_A_P_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A&amp;P Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Class_name__c</fullName>
        <label>Expense Classification Name (KOR)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_KR_Expense_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Category</label>
        <referenceTo>ASI_JP_TnE_Expense_Category__c</referenceTo>
        <relationshipLabel>ASI TnE Expense Classifications (Expense Category)</relationshipLabel>
        <relationshipName>ASI_TnE_Expense_Classifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Mileage_Claim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mileage Claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Notification_Email_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification Email 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Expense_Classifications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Notification_Email_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification Email 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Expense_Classifications6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Notification_Email_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification Email 4</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Expense_Classifications7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Notification_Email__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification Email 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_TnE_Expense_Classifications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Other_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TnE_Read_Only_Fields__c</fullName>
        <label>Read Only Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASI_TnE_Total_Number_Pax</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Date</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Currency</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Receipt_Amount</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_FX_Rate</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_HK_Payment_Amount</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Destination</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Invoice_Issuer</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Name_Company</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Client_Type</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_MFM_PO</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Market_Charged_To</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Outlet</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Tax_Inclusive</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_A_C_Code</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_SubBrand</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Details_of_Expense</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_WHT_Amount</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_CAP_Plan</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Charge_To_Acc</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Recipient_Type</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_GnH_Request</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Pre_Trip_Approval_Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_Required_Fields__c</fullName>
        <label>Required Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASI_TnE_Total_Number_Pax</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Destination</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Invoice_Issuer</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Name_Company</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Client_Type</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_MFM_PO</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Outlet</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_MFM_PO_Line_Item</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Tax_Inclusive</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_A_C_Code</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_SubBrand</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Billed_To</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Details_of_Expense</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Receipt_Amount</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_CAP_Plan</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Charge_To_Acc</fullName>
                </value>
                <value>
                    <fullName>ASI_TnE_Pre_Trip_Approval_Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TnE_WHT_Rate__c</fullName>
        <label>WHT Rate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1%</fullName>
                </value>
                <value>
                    <fullName>2%</fullName>
                </value>
                <value>
                    <fullName>3%</fullName>
                </value>
                <value>
                    <fullName>4%</fullName>
                </value>
                <value>
                    <fullName>5%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_en_US__c</fullName>
        <label>Expense Classification Name (ENG)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>ASI TnE Expense Classification</label>
    <listViews>
        <fullName>ASI_TnE_HK_All_Expense_Classifications</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Expense_Category__c</columns>
        <columns>ASI_TnE_Enforce_Attachment__c</columns>
        <columns>ASI_TnE_Other_Adjustment__c</columns>
        <columns>ASI_TnE_DM_BS__c</columns>
        <columns>ASI_TnE_Approver__c</columns>
        <columns>ASI_TnE_Notification_Email__c</columns>
        <columns>ASI_TnE_Read_Only_Fields__c</columns>
        <columns>ASI_TnE_Required_Fields__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Classification__c.ASI_TnE_HK_Expense_Classification</value>
        </filters>
        <label>All HK TnE Expense Classifications</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_ID_All_Expense_Classifications</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Expense_Category__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping__c</columns>
        <columns>ASI_TnE_Budget_Type__c</columns>
        <columns>ASI_TnE_Read_Only_Fields__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Classification__c.ASI_TnE_ID_Expense_Classification</value>
        </filters>
        <label>All ID TnE Expense Classifications</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_ID_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_KR_All_Expense_Classifications</fullName>
        <columns>ASI_TnE_KR_Expense_Category__c</columns>
        <columns>NAME</columns>
        <columns>ASI_TnE_KR_Class_name__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping__c</columns>
        <columns>ASI_TnE_GnH__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Classification__c.ASI_TnE_KR_Expense_Classification</value>
        </filters>
        <label>All KR TnE Expense Classifications</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_MY_All_Expense_Classifications</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Expense_Category__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping__c</columns>
        <columns>ASI_TnE_Budget_Type__c</columns>
        <columns>ASI_TnE_Read_Only_Fields__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Classification__c.ASI_TnE_MY_Expense_Classification</value>
        </filters>
        <label>All MY TnE Expense Classifications</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_MY_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_PH_All_Expense_Classifications</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Expense_Category__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping__c</columns>
        <columns>ASI_TnE_Budget_Type__c</columns>
        <columns>ASI_TnE_Read_Only_Fields__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Classification__c.ASI_TnE_PH_Expense_Classification</value>
        </filters>
        <label>All PH TnE Expense Classifications</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_PH_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_SG_All_Expense_Classifications</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Expense_Category__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping__c</columns>
        <columns>ASI_TnE_Read_Only_Fields__c</columns>
        <columns>ASI_TnE_Budget_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Classification__c.ASI_TnE_SG_Expense_Classification</value>
        </filters>
        <label>All SG TnE Expense Classifications</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_SG_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TH_All_Expense_Classifications</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Expense_Category__c</columns>
        <columns>ASI_TnE_Approver__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping__c</columns>
        <columns>ASI_TnE_Read_Only_Fields__c</columns>
        <columns>ASI_TnE_WHT_Rate__c</columns>
        <columns>ASI_TnE_Enforce_Attachment__c</columns>
        <columns>ASI_TnE_Budget_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Classification__c.ASI_TnE_TH_Expense_Classification</value>
        </filters>
        <label>All TH TnE Expense Classifications</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_TH_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TW_All_Expense_Classifications</fullName>
        <columns>ASI_JP_TnE_Expense_Category__c</columns>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Account_Mapping__c</columns>
        <columns>ASI_JP_TnE_Tax_Flag__c</columns>
        <columns>ASI_TnE_Mileage_Claim__c</columns>
        <columns>ASI_TnE_GnH__c</columns>
        <columns>ASI_TnE_GnH_Type__c</columns>
        <columns>ASI_TnE_DM_BS__c</columns>
        <columns>ASI_TnE_Read_Only_Fields__c</columns>
        <columns>ASI_TnE_Required_Fields__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Classification__c.ASI_TnE_TW_Expense_Classification</value>
        </filters>
        <label>All TW TnE Expense Classifications</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_GnH_TW_Compliance_Officer</group>
            <group>ASI_TnE_TW_Finance_Users</group>
            <group>ASI_TnE_TW_IT_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_JP_TnE_Expense_Category__c</columns>
        <columns>NAME</columns>
        <columns>Name_en_US__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping__c</columns>
        <columns>ASI_JP_TnE_Minimum_Amount__c</columns>
        <columns>ASI_JP_TnE_Maximum_Amount__c</columns>
        <columns>ASI_JP_TnE_Tax_Flag__c</columns>
        <columns>ASI_TnE_BC_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_JP_TnE_Bypass_Attendee_Validation__c</columns>
        <columns>ASI_TnE_Auto_Receipt_No__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_KH_TnE_Expense_Classifications</fullName>
        <columns>NAME</columns>
        <columns>ASI_JP_TnE_Expense_Category__c</columns>
        <columns>ASI_JP_TnE_Account_Mapping__c</columns>
        <columns>ASI_TnE_Read_Only_Fields__c</columns>
        <columns>ASI_TnE_Budget_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_JP_TnE_Expense_Classification__c.ASI_TnE_KH_Expense_Classification</value>
        </filters>
        <label>All KH TnE Expense Classifications</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_SG_Finance_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Expense Classification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASI TnE Expense Classifications</pluralLabel>
    <recordTypes>
        <fullName>ASI_JP_TnE_Expense_Classification</fullName>
        <active>true</active>
        <label>ASI TnE JP Expense Classification</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_HK_Expense_Classification</fullName>
        <active>true</active>
        <label>ASI TnE HK Expense Classification</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_ID_Expense_Classification</fullName>
        <active>true</active>
        <label>ASI TnE ID Expense Classification</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_KH_Expense_Classification</fullName>
        <active>true</active>
        <label>ASI TnE KH Expense Classification</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_KR_Expense_Classification</fullName>
        <active>true</active>
        <description>KR Expense Classification</description>
        <label>ASI_TnE_KR_Expense_Classification</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_MY_Expense_Classification</fullName>
        <active>true</active>
        <label>ASI TnE MY Expense Classification</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_PH_Expense_Classification</fullName>
        <active>true</active>
        <label>ASI TnE PH Expense Classification</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_SG_Expense_Classification</fullName>
        <active>true</active>
        <label>ASI TnE SG Expense Classification</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TH_Expense_Classification</fullName>
        <active>true</active>
        <label>ASI TnE TH Expense Classification</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TnE_TW_Expense_Classification</fullName>
        <active>true</active>
        <label>ASI TnE TW Expense Classification</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>